--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
 Django==4.2.5
+django-cors-headers==4.3.1
 django-environ==0.11.2
 django-tailwind==3.6.0
 gunicorn==21.2.0
